tests/compile_fail/derive_requires_qualified_path.stderr
error: expected variant identifier in requires
 --> tests/compile_fail/derive_requires_qualified_path.rs:6:24
  |
6 |     #[flag(requires = [self::Alpha])]
  |                        ^^^^^^^^^^^
